# Spilt-Inference

./: Makefile  README.md  RESEARCH.md  pyproject.toml
benchmarks/: bench_dp_utility.py  bench_split_overhead.py
examples/: quickstart.py
src/client/: __init__.py  decrypt.py  dp_noise.py  model_shard.py  split_client.py
src/common/: __init__.py  config.py  types.py
src/compiler/: __init__.py  device_profiles.py  privacy_budget.py  split_compiler.py
src/proto/: split_inference.proto
src/server/: __init__.py  parallel_helora.py  protocol.py  split_server.py
tests/: test_dp_noise.py  test_e2e_split.py  test_parallel_helora.py  test_privacy_budget.py
